Closed Bug 1435721 Opened 6 years ago Closed 6 years ago

[Dedicated profiles] Two profiles get created on first time use with the same random salt

Categories

(Toolkit :: Startup and Profile System, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox58 --- unaffected
firefox59 --- unaffected
firefox60 --- ?
firefox63 --- fixed

People

(Reporter: aflorinescu, Assigned: mossop)

References

Details

Attachments

(1 file)

[Environment:]
-Ubuntu 16.04 x64
-Firefox 60.0a1 (trybuild from https://treeherder.mozilla.org/#/jobs?repo=try&revision=6b67fc750f609d3eaa4097528528458e43bb4873&selectedJob=158774545)

[Pre-requisites:]
Delete all Firefox data and cache.

[Steps:]
1. Start Firefox Nightly try build.
2. Open about:support and open profile directory, navigate to .mozilla/firefox where the profiles directory are listed.



[Actual Result:]
There are two profiles created: default and default-nightly
example:  Path=eau36828.default && Path=eau36828.default-nightly
The default folder only contains the PCD file (times.json)

[Expected Result:]
Only the opened channel profile is created (in this scenario default-nightly)
It's intentional that we create two profiles, this is so older release builds don't use the nightly profile. However they shouldn't be using the same random salt and we shouldn't be generating times.json until first use.
Assignee: nobody → dtownsend
Summary: [Dedicated profiles] Two profiles get created on first time use → [Dedicated profiles] Two profiles get created on first time use with the same random salt
Priority: -- → P3
This function is practically identical to the code used to salt the profile
directory except it was fixed to not return matching strings when called in the
same second by bug 867769.
Comment on attachment 8988543 [details]
Bug 1435721: Use NS_MakeRandomString for salting the profile directory.

Florian Quèze [:florian] has approved the revision.

https://phabricator.services.mozilla.com/D1865
Attachment #8988543 - Flags: review+
Pushed by dtownsend@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bfff309c1643
Use NS_MakeRandomString for salting the profile directory. r=florian
https://hg.mozilla.org/mozilla-central/rev/bfff309c1643
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: