Bug 1435721: Use NS_MakeRandomString for salting the profile directory. r=florian

This function is practically identical to the code used to salt the profile
directory except it was fixed to not return matching strings when called in the
same second by bug 867769.

Differential Revision: https://phabricator.services.mozilla.com/D1865